RESOLVED FIXED113329
[Qt][WK2] QML WebView asserts when double clicking a link
https://bugs.webkit.org/show_bug.cgi?id=113329
Summary [Qt][WK2] QML WebView asserts when double clicking a link
Andras Becsi
Reported 2013-03-26 11:19:38 PDT
[Qt][WK2] QML WebView asserts when double clicking a link
Attachments
Patch (1.48 KB, patch)
2013-03-26 11:20 PDT, Andras Becsi
no flags
Andras Becsi
Comment 1 2013-03-26 11:20:10 PDT
Andras Becsi
Comment 2 2013-03-26 11:59:41 PDT
Comment on attachment 195123 [details] Patch Clearing flags on attachment: 195123 Committed r146914: <http://trac.webkit.org/changeset/146914>
Andras Becsi
Comment 3 2013-03-26 11:59:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.