[Qt][WK2] QML WebView asserts when double clicking a link https://bugs.webkit.org/show_bug.cgi?id=113329

Reviewed by Jocelyn Turcotte.

Downstream bugreport: https://bugreports.qt-project.org/browse/QTBUG-30288

Remove an erroneous assert which is no longer valid if
mouse gestures are enabled.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::handleInputEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@146914 bbb929c8-8fbe-4397-9dbb-9b2b20218538