third_party/WebKit/Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp
@@ -505,7 +505,6 @@ void QtWebPageEventHandler::handleInputEvent(const QInputEvent* event)
         m_isMouseButtonPressed = false;
         break;
     case QEvent::MouseButtonDblClick:
-        ASSERT_NOT_REACHED();
         return;
     default:
         break;
